# CudaPercolation

./: .gitignore  CMakeLists.txt  README.md  main.cu
headers/: Lattice.h  Lattice_Kernels.h  Settings.h  test.h
